--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-three/drei": "^10.7.5",
     "@react-three/fiber": "^9.3.0",
     "framer-motion": "^12.23.12",
+    "i18next": "^25.5.2",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^15.7.3",
     "three": "^0.180.0"
   },
   "devDependencies": {
